<RelativeLayout 	
    xmlns:android="http://schemas.android.com/apk/res/android"
   	xmlns:tools="http://schemas.android.com/tools"    
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">
	
    <AutoCompleteTextView
        android:id="@+id/InputStockSearch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/company_symbol" >

        <requestFocus />
    </AutoCompleteTextView>

    <Button
        android:id="@+id/btn_search"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/InputStockSearch"
        android:layout_toRightOf="@+id/InputStockSearch"
        android:text="@string/btn_search" />


	<ScrollView
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:layout_below="@+id/btn_search">	
		
		<RelativeLayout 	    
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content">
		    
	   	    <TextView
	           android:id="@+id/symbol_display"
	           android:layout_width="match_parent"
	           android:layout_height="wrap_content"	           
	           android:visibility="gone"/>
		       
	        <TextView
	           android:id="@+id/price_display"
	           android:layout_width="match_parent"
	           android:layout_height="wrap_content"
	           android:layout_below="@+id/symbol_display"
	           android:visibility="gone"/>
	
	        <ImageView
	           android:id="@+id/change_img_display"
	           android:contentDescription="@string/change_image_description"
	           android:layout_width="match_parent"
	           android:layout_height="wrap_content"
	           android:layout_below="@+id/price_display"	           
	           android:visibility="gone"/>
	        
	        <TextView
	           android:id="@+id/change_display"
	           android:layout_width="match_parent"
	           android:layout_height="wrap_content"
	           android:layout_below="@+id/price_display"	           
	           android:layout_toRightOf="@+id/change_img_display"
	           android:visibility="gone"/>	        
	
	         <TableLayout
	           android:id="@+id/stock_table_display"
	           android:layout_width="match_parent"
	           android:layout_height="wrap_content"
	           android:layout_below="@+id/change_display"
	           android:visibility="gone">
		     
	          </TableLayout>
	                
			<ImageView
			   android:id="@+id/stock_chart_display"
			   android:contentDescription="@string/stock_chart_description"
			   android:layout_width="match_parent"
			   android:layout_height="wrap_content"
			   android:layout_below="@+id/stock_table_display"
			   android:visibility="gone"/>
			
			<Button
			    android:id="@+id/btn_news"
			    android:layout_width="wrap_content"
			    android:layout_height="wrap_content"       	    
			    android:layout_below="@+id/stock_chart_display"
			    android:text="@string/btn_news"		
			    android:visibility="gone"/>
			
			<Button
			    android:id="@+id/btn_facebook"
			    android:layout_width="wrap_content"
			    android:layout_height="wrap_content"
			    android:layout_below="@+id/stock_chart_display"
			    android:layout_toRightOf="@+id/btn_news"
			    android:text="@string/btn_facebook"
			    android:visibility="gone"/>
	
	
		</RelativeLayout>
	</ScrollView>
</RelativeLayout>